# ovos-solver-plugin-gemini-chat

./: README.md  pyproject.toml
src/ovos_solver_gemini_chat/: __init__.py  dialog_transformers.py  engines.py  prompts.py
src/ovos_solver_plugin_gemini_chat/: __init__.py  dialog_transformers.py  engines.py
